// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correclty 1`] = `
<DrilldownLink
  className="overview-quality-gate-condition overview-quality-gate-condition-error"
  component="abcd-key"
  metric="open_issues"
  sinceLeakPeriod={false}
>
  <div
    className="overview-quality-gate-condition-container display-flex-center"
  >
    <div
      className="overview-quality-gate-condition-value text-center spacer-right"
    >
      <Measure
        decimals={2}
        metricKey="open_issues"
        metricType="INT"
        value="3"
      />
    </div>
    <div>
      <span
        className="overview-quality-gate-condition-metric little-spacer-right"
      >
        <IssueTypeIcon
          className="little-spacer-right"
          query="open_issues"
        />
        metric.open_issues.name
      </span>
      <span
        className="little-spacer-top small text-muted"
      >
        quality_gates.operator.GT
         
        1
      </span>
    </div>
  </div>
</DrilldownLink>
`;

exports[`should render correclty 2`] = `
<Link
  className="overview-quality-gate-condition overview-quality-gate-condition-error"
  onlyActiveOnIndex={false}
  style={Object {}}
  to={
    Object {
      "pathname": "/project/issues",
      "query": Object {
        "id": "abcd-key",
        "resolved": "false",
        "severities": "BLOCKER,CRITICAL,MAJOR,MINOR",
        "types": "BUG",
      },
    }
  }
>
  <div
    className="overview-quality-gate-condition-container display-flex-center"
  >
    <div
      className="overview-quality-gate-condition-value text-center spacer-right"
    >
      <Measure
        decimals={2}
        metricKey="reliability_rating"
        metricType="RATING"
        value="3"
      />
    </div>
    <div>
      <span
        className="overview-quality-gate-condition-metric little-spacer-right"
      >
        <IssueTypeIcon
          className="little-spacer-right"
          query="reliability_rating"
        />
        metric.reliability_rating.name
      </span>
      <span
        className="little-spacer-top small text-muted"
      >
        quality_gates.operator.GT.rating
         
        A
      </span>
    </div>
  </div>
</Link>
`;

exports[`should render correclty 3`] = `
<Link
  className="overview-quality-gate-condition overview-quality-gate-condition-error"
  onlyActiveOnIndex={false}
  style={Object {}}
  to={
    Object {
      "pathname": "/project/issues",
      "query": Object {
        "id": "abcd-key",
        "resolved": "false",
        "severities": "BLOCKER,CRITICAL,MAJOR,MINOR",
        "types": "VULNERABILITY",
      },
    }
  }
>
  <div
    className="overview-quality-gate-condition-container display-flex-center"
  >
    <div
      className="overview-quality-gate-condition-value text-center spacer-right"
    >
      <Measure
        decimals={2}
        metricKey="security_rating"
        metricType="RATING"
        value="3"
      />
    </div>
    <div>
      <span
        className="overview-quality-gate-condition-metric little-spacer-right"
      >
        <IssueTypeIcon
          className="little-spacer-right"
          query="security_rating"
        />
        metric.security_rating.name
      </span>
      <span
        className="little-spacer-top small text-muted"
      >
        quality_gates.operator.GT.rating
         
        A
      </span>
    </div>
  </div>
</Link>
`;

exports[`should render correclty 4`] = `
<Link
  className="overview-quality-gate-condition overview-quality-gate-condition-error"
  onlyActiveOnIndex={false}
  style={Object {}}
  to={
    Object {
      "pathname": "/project/issues",
      "query": Object {
        "id": "abcd-key",
        "resolved": "false",
        "types": "CODE_SMELL",
      },
    }
  }
>
  <div
    className="overview-quality-gate-condition-container display-flex-center"
  >
    <div
      className="overview-quality-gate-condition-value text-center spacer-right"
    >
      <Measure
        decimals={2}
        metricKey="sqale_rating"
        metricType="RATING"
        value="3"
      />
    </div>
    <div>
      <span
        className="overview-quality-gate-condition-metric little-spacer-right"
      >
        <IssueTypeIcon
          className="little-spacer-right"
          query="sqale_rating"
        />
        metric.sqale_rating.name
      </span>
      <span
        className="little-spacer-top small text-muted"
      >
        quality_gates.operator.GT.rating
         
        A
      </span>
    </div>
  </div>
</Link>
`;

exports[`should render correclty 5`] = `
<Link
  className="overview-quality-gate-condition overview-quality-gate-condition-error"
  onlyActiveOnIndex={false}
  style={Object {}}
  to={
    Object {
      "pathname": "/project/issues",
      "query": Object {
        "id": "abcd-key",
        "resolved": "false",
        "severities": "BLOCKER,CRITICAL,MAJOR,MINOR",
        "sinceLeakPeriod": "true",
        "types": "BUG",
      },
    }
  }
>
  <div
    className="overview-quality-gate-condition-container display-flex-center"
  >
    <div
      className="overview-quality-gate-condition-value text-center spacer-right"
    >
      <Measure
        decimals={2}
        metricKey="new_reliability_rating"
        metricType="RATING"
        value="3"
      />
    </div>
    <div>
      <span
        className="overview-quality-gate-condition-metric little-spacer-right"
      >
        <IssueTypeIcon
          className="little-spacer-right"
          query="new_reliability_rating"
        />
        metric.new_reliability_rating.name
      </span>
      <span
        className="little-spacer-top small text-muted"
      >
        quality_gates.operator.GT.rating
         
        A
      </span>
    </div>
  </div>
</Link>
`;

exports[`should render correclty 6`] = `
<Link
  className="overview-quality-gate-condition overview-quality-gate-condition-error"
  onlyActiveOnIndex={false}
  style={Object {}}
  to={
    Object {
      "pathname": "/project/issues",
      "query": Object {
        "id": "abcd-key",
        "resolved": "false",
        "severities": "BLOCKER,CRITICAL,MAJOR,MINOR",
        "sinceLeakPeriod": "true",
        "types": "VULNERABILITY",
      },
    }
  }
>
  <div
    className="overview-quality-gate-condition-container display-flex-center"
  >
    <div
      className="overview-quality-gate-condition-value text-center spacer-right"
    >
      <Measure
        decimals={2}
        metricKey="new_security_rating"
        metricType="RATING"
        value="3"
      />
    </div>
    <div>
      <span
        className="overview-quality-gate-condition-metric little-spacer-right"
      >
        <IssueTypeIcon
          className="little-spacer-right"
          query="new_security_rating"
        />
        metric.new_security_rating.name
      </span>
      <span
        className="little-spacer-top small text-muted"
      >
        quality_gates.operator.GT.rating
         
        A
      </span>
    </div>
  </div>
</Link>
`;

exports[`should render correclty 7`] = `
<Link
  className="overview-quality-gate-condition overview-quality-gate-condition-error"
  onlyActiveOnIndex={false}
  style={Object {}}
  to={
    Object {
      "pathname": "/project/issues",
      "query": Object {
        "id": "abcd-key",
        "resolved": "false",
        "sinceLeakPeriod": "true",
        "types": "CODE_SMELL",
      },
    }
  }
>
  <div
    className="overview-quality-gate-condition-container display-flex-center"
  >
    <div
      className="overview-quality-gate-condition-value text-center spacer-right"
    >
      <Measure
        decimals={2}
        metricKey="new_maintainability_rating"
        metricType="RATING"
        value="3"
      />
    </div>
    <div>
      <span
        className="overview-quality-gate-condition-metric little-spacer-right"
      >
        <IssueTypeIcon
          className="little-spacer-right"
          query="new_maintainability_rating"
        />
        metric.new_maintainability_rating.name
      </span>
      <span
        className="little-spacer-top small text-muted"
      >
        quality_gates.operator.GT.rating
         
        A
      </span>
    </div>
  </div>
</Link>
`;

exports[`should render correclty 8`] = `
<Link
  className="overview-quality-gate-condition overview-quality-gate-condition-error"
  onlyActiveOnIndex={false}
  style={Object {}}
  to={
    Object {
      "pathname": "/security_hotspots",
      "query": Object {
        "assignedToMe": undefined,
        "branch": undefined,
        "file": undefined,
        "hotspots": undefined,
        "id": "abcd-key",
        "pullRequest": undefined,
        "sinceLeakPeriod": undefined,
      },
    }
  }
>
  <div
    className="overview-quality-gate-condition-container display-flex-center"
  >
    <div
      className="overview-quality-gate-condition-value text-center spacer-right"
    >
      <Measure
        decimals={2}
        metricKey="security_hotspots_reviewed"
        metricType="RATING"
        value="3"
      />
    </div>
    <div>
      <span
        className="overview-quality-gate-condition-metric little-spacer-right"
      >
        <IssueTypeIcon
          className="little-spacer-right"
          query="security_hotspots_reviewed"
        />
        metric.security_hotspots_reviewed.name
      </span>
      <span
        className="little-spacer-top small text-muted"
      >
        quality_gates.operator.GT.rating
         
        A
      </span>
    </div>
  </div>
</Link>
`;

exports[`should render correclty 9`] = `
<Link
  className="overview-quality-gate-condition overview-quality-gate-condition-error"
  onlyActiveOnIndex={false}
  style={Object {}}
  to={
    Object {
      "pathname": "/security_hotspots",
      "query": Object {
        "assignedToMe": undefined,
        "branch": undefined,
        "file": undefined,
        "hotspots": undefined,
        "id": "abcd-key",
        "pullRequest": undefined,
        "sinceLeakPeriod": "true",
      },
    }
  }
>
  <div
    className="overview-quality-gate-condition-container display-flex-center"
  >
    <div
      className="overview-quality-gate-condition-value text-center spacer-right"
    >
      <Measure
        decimals={2}
        metricKey="new_security_hotspots_reviewed"
        metricType="RATING"
        value="3"
      />
    </div>
    <div>
      <span
        className="overview-quality-gate-condition-metric little-spacer-right"
      >
        <IssueTypeIcon
          className="little-spacer-right"
          query="new_security_hotspots_reviewed"
        />
        metric.new_security_hotspots_reviewed.name
      </span>
      <span
        className="little-spacer-top small text-muted"
      >
        quality_gates.operator.GT.rating
         
        A
      </span>
    </div>
  </div>
</Link>
`;

exports[`should work with branch 1`] = `
<Link
  className="overview-quality-gate-condition overview-quality-gate-condition-error"
  onlyActiveOnIndex={false}
  style={Object {}}
  to={
    Object {
      "pathname": "/project/issues",
      "query": Object {
        "branch": "branch-6.7",
        "id": "abcd-key",
        "resolved": "false",
        "sinceLeakPeriod": "true",
        "types": "CODE_SMELL",
      },
    }
  }
>
  <div
    className="overview-quality-gate-condition-container display-flex-center"
  >
    <div
      className="overview-quality-gate-condition-value text-center spacer-right"
    >
      <Measure
        decimals={2}
        metricKey="new_maintainability_rating"
        metricType="RATING"
        value="3"
      />
    </div>
    <div>
      <span
        className="overview-quality-gate-condition-metric little-spacer-right"
      >
        <IssueTypeIcon
          className="little-spacer-right"
          query="new_maintainability_rating"
        />
        metric.new_maintainability_rating.name
      </span>
      <span
        className="little-spacer-top small text-muted"
      >
        quality_gates.operator.GT.rating
         
        A
      </span>
    </div>
  </div>
</Link>
`;
